refs #52452 Fixed datatable column alignement

--- a/assets/scss/common/styles.scss
+++ b/assets/scss/common/styles.scss
@@ -261,12 +261,19 @@ and open the template in the editor.
     .efb-csv-export {
         pointer-events: none;
     }
+    .dataTables_scrollBody {
+        border-bottom: 0!important;
+    }
     .efb-wrap-list-form-data table.dataTable tbody th {
         font-weight: 600;
     }
-}
-.efb-shortcode-copy-note {
-    clear: both;
+    .DTFC_ScrollWrapper {
+        .DTFC_LeftBodyWrapper, .DTFC_RightBodyWrapper {
+            thead {
+                display: none;
+            }
+        }
+    }
 }
 .efb-table {
     .icon {
@@ -277,8 +284,8 @@ and open the template in the editor.
     }
     &.dataTable {
         background: white !important;
-        thead .header {
-            padding-right: 2rem!important;
+        border-bottom: 0 !important;
+        thead tr th {
             &:after, &:before {
                 margin-top: 0;
                 bottom: 1rem !important;
@@ -287,6 +294,9 @@ and open the template in the editor.
     }
 }
 
+.efb-shortcode-copy-note {
+    clear: both;
+}
 .text-left {
     text-align: left;
 }
